--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,5 +37,5 @@ nav:
       - 兰州大学:
           - 学校概况: gansu/lzu/lzu.md
   - 其他: 
-      - 高考考差了怎么办？: others/高考考差了怎么办？.md
+      - 高考考差了怎么办？: others/1.md
   
