--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,7 @@ nav:
   - 首页: 
     - 文档说明: index.md
     - 更新日志: 
-        - 正式版更新说明: changelog/1.md
+        - 正式版更新说明: change/1.md
   - 山东:
     - 山东大学:
         - 23计算机myh分享: shandong/sdu/1.md
