--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,15 +30,17 @@ nav:
   - 首页: 
     - 文档说明: index.md
     - 更新日志: 
-        - 正式版更新说明: change/1.md
+      - 正式版更新说明: change/1.md
   - 山东:
     - 山东大学:
-        - 23计算机myh分享: shandong/sdu/1.md
+      - 23计算机myh分享: shandong/sdu/1.md
   - 广东:
     - 中山大学:
-        - 23旅游管理csy分享: guangdong/sysu/1.md
-  #- 湖北:
-  #  - 武汉大学:
+      - 23旅游管理csy分享: guangdong/sysu/1.md
+  - 湖北:
+    - 武汉大学:
+      - 武汉大学饮食大测评: hubei/whu/1.md
+      - 喜欢上热搜的大学……: hubei/whu/2.md
   #- 甘肃:
   #  - 兰州大学:
   - 其他: 
