修复：修复了主页路径错误的bug

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,30 +14,27 @@ theme:
     - navigation.sections
     - navigation.expand
     - search.suggest
+    - search.highlight
+    - search.share
   palette: 
     primary: indigo
 
 plugins:
   - search:
       lang:
+        - zh
         - en
         - ja
-        - zh
       separator: '[\s\u200b\-]+'
-      prebuild_index: true
-      min_search_length: 2
-      jieba_dict: dict.txt.big
-      jieba_dict_user: user_dict.txt
 
 nav:
-  - 首页: 
-      - 文档说明: 
-          - 主页: beginning/index.md
-          - 阅读者指南: beginning/reading.md
-          - 贡献指南: beginning/writing.md
-          - 联系我们: beginning/contact.md
-      - 更新日志: 
-          - 正式版更新说明: change/1.md
+  - 首页: index.md
+  - 文档说明: 
+      - 阅读者指南: beginning/reading.md
+      - 贡献指南: beginning/writing.md
+      - 联系我们: beginning/contact.md
+  - 更新日志: 
+      - 正式版更新说明: change/1.md
   - 山东:
       - 山东大学:
           - 山大计算机测如评: shandong/sdu/1.md
