完善：动态索引省份

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -11,6 +11,8 @@ huitalang:
 jiarandiyi:
   name: 嘉然世界第一可爱
   title: 武汉大学法学院
+  url: https://github.com/TaffyNo1cute
+  image_url: https://github.com/TaffyNo1cute.png
 
 wuzei:
   name: 乌贼
