完善：修复了一些bug，添加了两篇文章

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -25,3 +25,11 @@ kasabulanka:
 寒槑居士:
   name: 寒槑居士
   title: 北京师范大学汉语言文学
+
+佚名:
+  name: 佚名
+  title: 全民制作人
+
+东莞第一深情:
+  name: 东莞第一深情
+  title: 东北大学（秦皇岛校区）
