main: 添加浙江大学混合班分享 (#3)

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -33,3 +33,10 @@ kasabulanka:
 东莞第一深情:
   name: 东莞第一深情
   title: 东北大学（秦皇岛校区）
+
+pease:
+  name: Pease
+  title: 浙江大学计算机科学与技术
+  url: https://github.com/Pease698
+  image_url: https://github.com/Pease698.png
+  
